syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MsgDeposit {
  repeated common.Coin coins = 1 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/common.Coins", (gogoproto.nullable) = false];
  string memo = 2;
  bytes signer = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
