
syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "gogoproto/gogo.proto";

message MsgForgiveSlash {
  string blocks = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  bytes node_address = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes signer = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
