syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/x/mayachain/types/type_observed_tx.proto";
import "gogoproto/gogo.proto";

message MsgObservedTxOut {
  repeated ObservedTx txs = 1 [(gogoproto.castrepeated) = "ObservedTxs", (gogoproto.nullable) = false];
  bytes signer = 2  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
