syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/x/mayachain/types/type_observed_tx.proto";
import "gogoproto/gogo.proto";

message MsgRefundTx {
  ObservedTx tx = 1 [(gogoproto.nullable) = false];
  string in_tx_id = 2 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.TxID", (gogoproto.customname) = "InTxID"];
  bytes signer = 3  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
