syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "gogoproto/gogo.proto";

message MsgSetAztecAddress {
  string aztec_address = 1 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Address"];
  bytes signer = 2  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
