syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MsgSolvency {
  string id = 1 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.TxID"];
  string chain = 2 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Chain"];
  string pub_key = 3 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.PubKey"];
  repeated common.Coin coins = 4 [(gogoproto.castrepeated) = "gitlab.com/mayachain/mayanode/common.Coins", (gogoproto.nullable) = false];
  int64 height = 5;
  bytes signer = 6 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
