syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message MAYANameAlias {
  string chain = 1 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Chain"];
  string address = 2 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Address"];
}

message MAYAName {
  string name = 1 ;
  int64 expire_block_height = 2;
  bytes owner = 3  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  common.Asset preferred_asset = 4 [(gogoproto.nullable) = false];
  repeated MAYANameAlias aliases = 5  [(gogoproto.nullable) = false];
  int64 affiliate_split = 6;
  int64 sub_affiliate_split = 7;
}
