syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = false;
option (gogoproto.goproto_getters_all) = false;

import "gogoproto/gogo.proto";

message ObservedNetworkFeeVoter {
  int64 block_height = 1;
  int64 report_block_height = 2;
  string chain = 3 [(gogoproto.casttype) = "gitlab.com/mayachain/mayanode/common.Chain"];
  repeated string signers = 4;
  int64 fee_rate = 5;
}
