syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";
  
import "mayachain/v1/common/common.proto";
import "gogoproto/gogo.proto";

message RagnarokWithdrawPosition {
  int64 number = 1;
  common.Asset pool = 2 [(gogoproto.nullable) = false];
}
