syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all)         = false;
option (gogoproto.goproto_getters_all) = false;

import "gogoproto/gogo.proto";

message TssKeysignFailVoter {
  string id = 1 [(gogoproto.customname) = "ID"];
  int64 height = 4;
  repeated string signers = 6;
}
